[package]
name = "nvdl"
version = "0.1.2"
edition = "2024"
authors = ["Quin Gillespie <trypsynth@gmail.com>"]
categories = ["accessibility", "command-line-utilities", "web-programming::http-client"]
description = "Retrieve a direct download link or download the NVDA screen reader."
keywords = ["cli", "nvda", "downloader", "nvda_url"]
license = "Zlib"
repository = "https://github.com/trypsynth/nvdl"
readme = "README.md"
rust-version = "1.88.0"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
dialoguer = "0.12.0"
nvda_url = "0.1.3"
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "json", "rustls"] }
tokio = { version = "1.49.0", features = ["full"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
